@@ -8,7 +8,7 @@
     // check ActiveXObject first because IE7+ implementation of
     // XMLHttpRequest doesn't work with local files.
     var getTransport = function getTransport() { return false };
-    if (isHostObject(global, 'ActiveXObject')) {
+    if (Feature('ACTIVE_X_OBJECT')) {
       // the `Difference between MSXML2.XmlHttp and Microsoft.XmlHttp ProgIDs`
       // post explains why MSXML2.XmlHttp is not needed:
       // http://forums.asp.net/p/1000060/1622845.aspx
