@@ -1,3 +1,5 @@
+* Refactor Fuse.Fusebox() and add the ACTIVE_X_OBJECT feature test. [jddalton]
+
 * Fix a regression bug in Fuse.Class that stopped access to a class's `_super` method. [jddalton]
 
 * Ensure Fuse.Dom.Selector.select() adapters return extended elements in IE. [jddalton]
